# finance

./: .gitignore  .tool-versions  README.md  build.gradle.kts  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build-workflow.yml
data/: AAPL.US.json  AMZN.US.json  MCD.US.json  MCD.json  MSFT.US.json
design/: system_design.drawio
scripts/: build.sh  nasdaq.js  nasdaq.json  nyse.js  nyse.json  tsx.js
src/main/kotlin/sh/huang/finance/: FinanceApplication.kt
src/main/kotlin/sh/huang/finance/configuration/: ApplicationConfiguration.kt
src/main/kotlin/sh/huang/finance/constant/: ExchangeConstant.kt
src/main/kotlin/sh/huang/finance/dataproviders/eodhd/: EodhdApiClient.kt  EodhdStockDailyData.kt
src/main/kotlin/sh/huang/finance/graphql/: StockHistoryController.kt  StockSymbolController.kt
src/main/kotlin/sh/huang/finance/job/: StockHistorySyncJob.kt  StockSymbolSyncJob.kt
src/main/kotlin/sh/huang/finance/service/: EodhdApiService.kt  NasdaqNyseAmexSymbolService.kt  StockHistoricalDataService.kt  StockSymbolService.kt  TsxSymbolService.kt
src/main/resources/: application-ci.properties  application-local.properties  application-prod.properties  application-test.properties  application.properties
src/main/resources/db/changelog/: changelog-postgres.sql  changelog.sql
src/main/resources/graphql/: schema.graphqls
src/test/kotlin/sh/huang/finance/: FinanceApplicationTests.kt  StockHistoricalDataSyncTests.kt
src/test/resources/: application.properties
yfinance/: app.py
(+5 files in other folders)
