[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["Jimmy Huang <jimmy.s.huang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.36"
Flask = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
